--- a/main.css
+++ b/main.css
@@ -1,15 +1,100 @@
 html {
     font-size: 16px;
     width: 100%;
+    font-family: Arial, sans-serif;
+}
+
+nav {
+    padding-top: 1rem;
+}
+
+.list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
+li {
+    float: left;
+    padding: 0.5rem;
+    font-size: 0.8rem;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a .apps-img {
+    position: relative;
+    top: -4px;
+}
+
+.sign-in-btn {
+    background-color: #4285f4;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px #4285f4;
+    font-weight: bold;
+    position: relative;
+    top: -8px;
+    font-size: 0.8rem;
 }
 
 .main-sec {
     display: flex;
+    width: 100%;
     flex-direction: column;
     align-items: center;
-    padding-top: 10rem;
+    padding-top: 5rem;
 }
 
 .search-bar {
     width: 35%;
+    border-radius: 24px;
+    padding: 0.5rem;
+    border: 1px solid #dfe1e5;
+}
+
+.search-bar:hover, .search-bar:focus, .search-bar:active {
+    box-shadow: 0 1px 6px rgba(32,33,36,.28);
+}
+
+.buttons {
+    display: flex;
+}
+
+.main-btn {
+    margin: 1.5rem 0.5em;
+    background-color: #f2f2f2;
+    color: #5F6368;
+    cursor: pointer;
+    border: 1px solid #f2f2f2;
+}
+
+.main-btn:hover {
+    color: #222;
+    border: 1px solid #c6c6c6;
+}
+
+button {
+    border-radius: 4px;
+    border: none;
+    padding: 0.5rem 0.8rem;
+}
+
+button:hover {
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 }
