--- a/main.css
+++ b/main.css
@@ -8,6 +8,18 @@ nav {
     padding-top: 1rem;
 }
 
+footer {
+    background-color: #f2f2f2;
+    height: 35px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    margin-bottom: 0;
+    color: #5f6368;
+}
+
 .list {
     list-style-type: none;
     margin: 0;
@@ -30,7 +42,7 @@ li {
 
 a {
     text-decoration: none;
-    color: #000;
+    color: #222;
 }
 
 a:hover {
@@ -98,3 +110,4 @@ button {
 button:hover {
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 }
+
